responsive bio images

--- a/app/views/bio/show.html.erb
+++ b/app/views/bio/show.html.erb
@@ -1,5 +1,5 @@
 <div class = "container">
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>Ryu</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/ryu") %>
@@ -14,7 +14,7 @@
   </div>
 
 
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>Ken</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/ken") %>
@@ -28,7 +28,7 @@
     </ul>
   </div>
 
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>E.Honda</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/ehonda") %>
@@ -42,7 +42,7 @@
     </ul>
   </div>
 
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>Blanka</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/blanka") %>
@@ -56,7 +56,7 @@
     </ul>
   </div>
 
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>Guile</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/guile") %>
@@ -70,7 +70,7 @@
     </ul>
   </div>
 
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>Chun-Li</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/chun-li") %>
@@ -84,7 +84,7 @@
     </ul>
   </div>
 
-  <div class = "col-xs-3">
+  <div class = "col-md-3">
     <h1>Zangief</h1>
     <%= link_to home_path do %>
     <%= image_tag("gifs/zangief") %>
@@ -99,7 +99,7 @@
   </div>
 
 
-    <div class = "col-xs-3">
+    <div class = "col-md-3">
       <h1>Dhalsim</h1>
       <%= link_to home_path do %>
       <%= image_tag("gifs/dhalsim") %>
